# koala-clash

./: .gitignore  README.md  electron-builder.yml  package.json  tsconfig.node.json  tsconfig.tests.json  tsconfig.web.json
docs/: amnezia-helper-first-local-run.md  amnezia-helper-platform-matrix.md  amnezia-helper-real-backend-integration.md  amnezia-helper-real-platform-validation.md  amnezia-helper-release-packaging.md  amnezia-helper-stability.md  amnezia-helper-support-readiness.md  amnezia-helper-tun-bypass.md  amnezia-helper-tun-dns-rule-reliability.md  amnezia-helper-tun-smoke.md  amnezia-helper-udp-capability.md  amnezia-helper-verification.md  amnezia-import.md  direct-tun-bypass-compatibility.md  getting-started-vpn-amnezia.md  glossary.md  learned-process-bypass.md  macos-process-bypass-native.md  native-process-bypass-capabilities.md  native-profile-validation-checklist.md  platform-capabilities.md  realtime-apps-reliability.md  troubleshooting.md  windows-process-bypass-service.md
native/windows-process-bypass/: CMakeLists.txt  README.md  contract.json
native/windows-process-bypass/include/: koala_process_bypass.h
native/windows-process-bypass/src/: controller_main.cpp  json.cpp  platform.cpp  service_main.cpp  wfp_policy.cpp
scripts/: amnezia-helper-artifacts.ts  amnezia-helper-build.ts  amnezia-helper-matrix.ts  amnezia-helper-platform-validation.ts  amnezia-helper-smoke.ts  prepare.mjs  realtime-preset-quality.ts
tests/: amnezia-helper-artifacts.test.ts  amnezia-helper-backend-provider.test.ts  amnezia-helper-build.test.ts  amnezia-import.test.ts  (+47 more)
(+161 files in other folders)
